<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:id="@+id/scrollView2"
    android:background="@color/white"
    android:layout_below="@+id/appLogo">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/trans_bg"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pls_verify"
                android:id="@+id/textView"
                android:textSize="22sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_view1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/username"
                android:textSize="16sp"
                android:id="@+id/fullName"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_rounded"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/user"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/phoneNumber"
                android:textSize="16sp"
                android:id="@+id/number"
                android:background="@drawable/white_rounded"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                />

            <ProgressBar
                android:id="@+id/progressbar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:text="@string/verify"
                android:background="@drawable/button"
                android:id="@+id/btn_verify"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>

</ScrollView>