<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:id="@+id/scrollView"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/report"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:src="@mipmap/report" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/layout1"
            android:background="@drawable/trans_bg"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_issue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#000000"
                android:id="@+id/report_msg"
                android:paddingTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/message"
                android:textSize="16sp"
                android:id="@+id/type_message"
                android:background="@drawable/white_rounded"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:drawablePadding="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="5dp"
                />

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/layout1">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/attach"
                    android:id="@+id/right1"
                    />

                <TextView
                    android:id="@+id/insert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert"
                    android:textSize="15sp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/imgView1"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/layout2">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/camera"
                    android:id="@+id/right2"
                    />

                <TextView
                    android:id="@+id/capture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capture"
                    android:textSize="15sp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/imgView2"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
            </LinearLayout>

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/send"
                android:background="@drawable/button"
                android:id="@+id/btn_signIn"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>