<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >


    <ImageView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@mipmap/phone"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/phone">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ntc"
            android:id="@+id/right1"
            />

        <TextView
            android:id="@+id/Ntc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ntc"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/grey"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/layout1">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ncell"
            android:id="@+id/right2"
            />

        <TextView
            android:id="@+id/Ncell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ncell"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/grey"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/layout2" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/gmail"
            android:id="@+id/right3"
            />

        <TextView
            android:id="@+id/Gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/grey" />
    </LinearLayout>

</RelativeLayout>